--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,22 @@
 			</plugin>
 		</plugins>
 	</build>
-	
 
+	<scm>
+		<connection>scm:git:ssh://github.com:Mapirium/RoutingServer.git</connection>
+		<developerConnection>scm:git:ssh://github.com:Mapirium/RoutingServer.git</developerConnection>
+		<url>scm:git:ssh://github.com:Mapirium/RoutingServer.git</url>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>hosted.heaas.releases</id>
+			<url>http://repo.surech.ch/content/repositories/hosted.mapirium.releases</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>hosted.heaas.snapshots</id>
+			<url>http://repo.surech.ch/content/repositories/hosted.mapirium.snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
